# rust-web-test

./: Cargo.toml
adapter/: Cargo.toml
adapter/src/: lib.rs
application/: Cargo.toml
application/src/: company.rs  lib.rs  main.rs
driver/: Cargo.toml
driver/src/: company.rs  main.rs
src/: company.rs  main.rs
