[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql" ] }
async-trait = "0.1.64"
anyhow = "1.0"
application = { path = "../application" }
futures-core = "0.3.26"
futures-util = "0.3.26"
